--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 spring.application.name=blog01
 
-# H2 Database for development
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Default profile (if none specified, use dev)
+spring.profiles.active=dev
 
-# H2 Console (to see database in browser)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# JWT configuration (will be overridden by environment-specific files)
+app.jwt.issuer=01Blog
+app.jwt.expiration=PT24H
 
-# JPA Settings
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+# Database configuration defaults
+app.database.ddl-auto=validate
+app.database.show-sql=false
+app.database.enable-h2-console=false
+
+# JPA base settings
+spring.jpa.open-in-view=false
 
 # uncomment it to disable Spring security (signing page)
 # spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
